# energi

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  vite.config.ts
.zed/: tasks.json
assets/: tailwind.css
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/upower/: battery_data.rs  lib.rs  mod.rs
src/components/: ActionButton.tsx  ColorThemeButton.tsx  Footer.tsx  Home.tsx  LineGraph.tsx  ReadingTile.tsx  battery_graph.rs  battery_graph_recharts.rs  home.rs  mod.rs  reading_tile.rs
src/models/: battery_data.rs  mod.rs  upower.rs
src/types/: battery_data.ts
